--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -409,29 +409,29 @@
                                     <thead>
                                         <tr>
                                             <th></th>
-                                            <th class="text-navyblue">{{"Beginning Amount" | localize}}</th>
-                                            <th class="text-navyblue">{{"Accrued Amortization" | localize}}</th>
-                                            <th class="text-navyblue">{{"Net Amount" | localize}}</th>
+                                            <th class="text-navyblue big">{{"Beginning Amount" | localize}}</th>
+                                            <th class="text-navyblue big">{{"Accrued Amortization" | localize}}</th>
+                                            <th class="text-navyblue big">{{"Net Amount" | localize}}</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td class="text-navyblue">{{"Total" | localize}}:</td>
-                                            <td class="text-blue"> {{begininngAmount| formater }}</td>
-                                            <td class="text-blue"> {{accuredAmount| formater }}</td>
-                                            <td class="text-blue"> {{netAmount | formater}}</td>
+                                            <td class="text-black big">{{"Total" | localize}}:</td>
+                                            <td class="text-black big"> {{begininngAmount| formater }}</td>
+                                            <td class="text-black big"> {{accuredAmount| formater }}</td>
+                                            <td class="text-black big"> {{netAmount | formater}}</td>
                                         </tr>
                                         <tr>
-                                            <td class="text-navyblue">{{"Trial Balance" | localize}}:</td>
-                                            <td class="text-blue"  >{{trialBalanceBeginning | formater}}</td>
-                                            <td class="text-blue"  >{{trialBalanceAccured | formater}}</td>
-                                            <td class="text-blue"  >{{trialBalanceNet | formater}}</td>
+                                            <td class="text-black big">{{"Trial Balance" | localize}}:</td>
+                                            <td class="text-black big"  >{{trialBalanceBeginning | formater}}</td>
+                                            <td class="text-black big"  >{{trialBalanceAccured | formater}}</td>
+                                            <td class="text-black big"  >{{trialBalanceNet | formater}}</td>
                                         </tr>
                                         <tr>
-                                            <td class="text-navyblue">{{"Variance" | localize}}:</td>
-                                            <td class="text-blue" > {{varianceBeginning | formater}}</td>
-                                            <td class="text-blue" > {{varianceAccured | formater}}</td>
-                                            <td class="text-blue" > {{varianceNet | formater}}</td>
+                                            <td class="text-black big">{{"Variance" | localize}}:</td>
+                                            <td class="text-black big" > {{varianceBeginning | formater}}</td>
+                                            <td class="text-black big" > {{varianceAccured | formater}}</td>
+                                            <td class="text-black big" > {{varianceNet | formater}}</td>
                                         </tr>
                                     </tbody>
                                 </table>
