--- a/angular/src/app/main/checklist/user-list-component/user-list-component.component.css
+++ b/angular/src/app/main/checklist/user-list-component/user-list-component.component.css
@@ -14,19 +14,9 @@ body {
     position: relative;
 }
 
-.ng-select.auto-grow {
-    display: flex;
-}
-.ng-select.auto-grow  .ng-select-container {
-    max-width: 100px;
-}
-.ng-select.auto-grow .ng-dropdown-panel {
-    width: auto;
-}
-  
-::ng-deep ng-dropdown-panel {
-    transition: opacity 0.1s linear;
-}
+.ng-select ::ng-deep .ng-dropdown-panel{
+    width: auto !important;
+  }
 .imagedropdown{
     width:25px;
      height:25px;
