--- a/angular/src/account/login/login.component.html
+++ b/angular/src/account/login/login.component.html
@@ -2,12 +2,17 @@
 <div class="kt-grid kt-grid--hor kt-grid--root kt-login kt-login--v2 kt-login--signin" id="kt_login">
     <div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor"
         style="background-image: url(./assets/media//bg/background_1.png);">
+        <div *ngIf="multiTenancySideIsTeanant" routerLink="/account/tenant-user-register" class="row d-flex justify-content-end pt-3 pr-5">
+            <a  
+                class="btn btn-transparent border text-white">Getting Started</a>
+        </div>
         <div class="kt-grid__item kt-grid__item--fluid kt-login__wrapper">
             <div class="kt-login__container">
                 <div class="kt-login__logo">
                     <a href="#">
                         <img src="./assets/media/logos/logo.png">
                     </a>
+                    
                 </div>
                 <div class="kt-login__signin">
                     <div class="kt-login__head">
@@ -57,14 +62,14 @@
                     </form>
                 </div>
 
-                <div class="kt-login__account">
+                <div *ngIf="!multiTenancySideIsTeanant" class="kt-login__account">
                     <span class="kt-login__account-msg">
                         Don't have an account yet ?
                     </span>&nbsp;&nbsp;
-                    <a *ngIf="!multiTenancySideIsTeanant" routerLink="/account/register"  id="kt_login_signup"
+                    <a routerLink="/account/register"  id="kt_login_signup"
                         class="kt-link kt-link--light kt-login__account-link">Request Access</a>
-                        <a *ngIf="multiTenancySideIsTeanant" routerLink="/account/tenant-user-register"  id="kt_login_signup"
-                        class="kt-link kt-link--light kt-login__account-link">Request Access</a>
+                        <!-- <a *ngIf="multiTenancySideIsTeanant" routerLink="/account/tenant-user-register"  id="kt_login_signup"
+                        class="kt-link kt-link--light kt-login__account-link">Request Access</a> -->
 
                         
                 </div>
@@ -73,3 +78,4 @@
     </div>
 </div>
 </div>
+
