Corrected spelling mistakes.

--- a/angular/src/account/register/register.component.html
+++ b/angular/src/account/register/register.component.html
@@ -173,7 +173,7 @@
                                             <div class="form-group">
                                                 <label>City</label>
                                                 <select name="city" [(ngModel)]="businessInfoDto.city" class="form-control bg-white border">
-                                                    <option value="NewYark">New Yark</option>
+                                                    <option value="NewYark">New York</option>
                                                     <option value="Afghanistan">Afghanistan</option>
                                                 </select>
                                                     
@@ -183,7 +183,7 @@
                                             <div class="form-group">
                                                 <label>State</label>
                                                 <select name="state" [(ngModel)]="businessInfoDto.state" class="form-control bg-white border">
-                                                    <option value="NewYark">New Yark</option>
+                                                    <option value="NewYark">New York</option>
                                                     <option value="Afghanistan">Afghanistan</option>
                                                 </select>    
                                             </div>
@@ -671,7 +671,7 @@
                                                     <label>Commitment</label>
                                                     <select name="Commitment" #commitmentOfUser="ngModel" [(ngModel)]="paymentDetailsDto.commitment"class="form-control bg-white border">
                                                         <option value="0">Monthly Plan</option>
-                                                        <option value="1">Annullly Plan</option>
+                                                        <option value="1">Annully Plan</option>
                                                     </select>
                                                 </div>
                                             </div>
