--- a/angular/src/app/main/reconcilliation/itemized/itemized.component.html
+++ b/angular/src/app/main/reconcilliation/itemized/itemized.component.html
@@ -32,14 +32,13 @@
                                 </div>
                                 <div class="kt-subheader__toolbar">
                                     <div class="kt-subheader__wrapper">
+                                        <button [ngClass]="{'disabled':!monthStatus}" class="btn btn-brand" (click)="RedirectToAddNew()"><i
+                                            class="fa fa-plus"></i>
+                                        {{"AddNew" | localize}}</button>
                                         <a class="mr-3" href="javascript: void(0);" (click)="BackToReconcileList()">
                                             <i class="la la-arrow-left"></i>
                                             {{"Back" | localize}}
                                         </a>
-
-                                        <button [ngClass]="{'disabled':!monthStatus}" class="btn btn-brand" (click)="RedirectToAddNew()"><i
-                                            class="fa fa-plus"></i>
-                                        {{"AddNew" | localize}}</button>
                                     </div>
                                 </div>
                             </div>
@@ -101,7 +100,7 @@
                         -->
                         <table class="table record-table">
                             <tbody *ngFor="let item of itemList">
-                                <tr  class="task-table-inner table-repeater">
+                                <tr  class="task-table-inner table-repeater" class="{{item.isDeleted == true ? 'warnning' : '' }}">
                                     <td class="accountNo-cell">
                                         <span class="">{{item.date | date}}</span>
                                     </td>
