--- a/angular/src/app/main/reconcilliation/amortized/amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized.component.html
@@ -110,7 +110,7 @@
                           class="{{item.isDeleted == true ? 'warnning' : '' }}"  -->
                         <table class="table record-table">
                             <tbody *ngFor="let item of itemList">
-                                <tr  class="task-table-inner table-repeater" >
+                                <tr  class="task-table-inner table-repeater" class="{{item.isDeleted == true ? 'warnning' : '' }}" >
                                     <td class="accountNo-cell">
                                         <span class="">{{item.startDate | date}}</span>
                                     </td>
