--- a/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/amortized-details/amortized-details.component.html
@@ -18,7 +18,7 @@
                             <a  [ngClass]="{'disabled':!monthStatus}" class="btn" href="javascript:;"
                                 (click)="editAmortizedItem()">
                                 <img src="../../../../assets/img/edit.svg"></a>
-                            <a *ngIf="itemizationDto.isDeleted != true"  [ngClass]="{'disabled':!monthStatus}" class="btn" href="javascript:;"
+                            <a *ngIf="amortizationDto.isDeleted != true"  [ngClass]="{'disabled':!monthStatus}" class="btn" href="javascript:;"
                                 (click)="deleteItem()">
                                 <img src="../../../../assets/img/del.svg"></a>
                              <a *ngIf="amortizationDto.isDeleted == true" class="btn" href="javascript:;"
